--- a/app/src/main/res/layout/fragment_view_users.xml
+++ b/app/src/main/res/layout/fragment_view_users.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ProgressBar
+        android:id="@+id/loadingIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="visible" />
     <!-- RecyclerView to display system users -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
