--- a/app/src/main/res/layout/item_system_user.xml
+++ b/app/src/main/res/layout/item_system_user.xml
@@ -1,23 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- item_system_user.xml -->
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp">
 
+    <!-- Thumbnail Image -->
+    <ImageView
+        android:id="@+id/imageThumbnail"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/default_logo_user"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="16dp"/>
+
+    <!-- Other TextViews -->
     <TextView
         android:id="@+id/textViewUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:textColor="#333333"
         android:textStyle="bold"
-        android:layout_marginBottom="8dp"
+        android:textColor="#333333"
+        app:layout_constraintStart_toEndOf="@+id/imageThumbnail"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toStartOf="@+id/guidelineRole"
+        android:layout_marginBottom="8dp"/>
+
 
     <TextView
         android:id="@+id/textViewUserEmail"
@@ -49,26 +60,42 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+
+    <!-- Include your other TextViews (Email, Age, PhoneNumber) similarly -->
+
+    <!-- Guideline for Role TextView -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineRole"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.75"/>
+
+    <!-- Role TextView -->
     <TextView
         android:id="@+id/textViewUserRole"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:textColor="#666666"
-        app:layout_constraintTop_toBottomOf="@+id/textViewUserPhoneNumber"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="8dp"/>
+        android:textColor="#09B9CA"
+        app:layout_constraintStart_toEndOf="@+id/guidelineRole"
+        app:layout_constraintTop_toTopOf="@+id/textViewUserName"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="4dp"/>
 
+    <!-- Status TextView -->
     <TextView
         android:id="@+id/textViewUserStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:textColor="#666666"
+        android:textColor="#0EB532"
+        android:paddingTop="40dp"
+        app:layout_constraintStart_toEndOf="@+id/guidelineRole"
         app:layout_constraintTop_toBottomOf="@+id/textViewUserRole"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
