--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="purple_700">#FF3700B3</color>
 
-
+    <color name="red">#FF0000</color>
+    <color name="green">#00FF00</color>
 
 </resources>
