--- a/app/src/main/res/layout/fragment_add_user.xml
+++ b/app/src/main/res/layout/fragment_add_user.xml
@@ -14,13 +14,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Create New User (admin only)"
-            android:textSize="18sp"
-            android:textColor="@color/black" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,7 +26,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Email"
+                android:text="Email (must be similar to your gmail)"
                 android:textSize="18sp"
                 android:textColor="@color/black"
                 android:layout_marginTop="16dp" />
