--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -43,6 +43,7 @@
                     android:layout_marginTop="20dp"
                     android:background="@drawable/lavender_border"
                     android:padding="8dp"
+                    android:inputType="textPassword"
                     android:hint="Password"
                     android:drawableLeft="@drawable/baseline_lock_24"
                     android:drawablePadding="8dp"
