--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,8 @@
             <item name="colorSecondary">@color/teal_200</item>
             <item name="colorSecondaryVariant">@color/teal_700</item>
             <item name="colorOnSecondary">@color/black</item>
+            <item name="android:itemBackground">@color/menuBackground</item>
+            <item name="android:textColor">@color/menuText</item>
             <!-- Status bar color. -->
             <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
             <!-- Customize your theme here. -->
