--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="143dp"
-            android:layout_height="158dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/default_logo_user" />
 
@@ -32,6 +32,7 @@
             />
 
         <Button
+            android:id="@+id/btnEditProfilePic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Edit profile picture"
